Fixed height issues on safari, had to remove transition effect for it to work properly.

--- a/style-use.css
+++ b/style-use.css
@@ -26,7 +26,10 @@ body {
     margin: 0px;
     padding: 0px;
     width: 100%;
-    height: 100vh;
+    overflow: hidden;
+}
+
+html {
     overflow: hidden;
 }
 
@@ -568,7 +571,6 @@ div.content-calendar {
 
 
 /* Login Screen Styling */
-
 body {
     background-color: #151515;
 }
@@ -616,5 +618,12 @@ div.login-container button {
     width: 80%;
     height: 40px;
 }
-
 /* End Login Screen Styling */
+
+/* Mobile phone styling */
+
+@media only screen and (max-width: 600px) {
+    body {
+      background-color: lightblue;
+    }
+  }
